src/renderer/styles.css
@import 'tailwindcss';
@import "tw-animate-css";

@import 'codemirror/lib/codemirror.css';
@import 'codemirror/addon/hint/show-hint.css';
@import 'codemirror/theme/tomorrow-night-eighties.css';

@import "@fontsource/noto-sans/100.css";
@import "@fontsource/noto-sans/200.css";
@import "@fontsource/noto-sans/300.css";
@import "@fontsource/noto-sans/400.css";
@import "@fontsource/noto-sans/500.css";
@import "@fontsource/noto-sans/600.css";
@import "@fontsource/noto-sans/700.css";
@import "@fontsource/noto-sans/800.css";
@import "@fontsource/noto-sans/900.css";
@import "@fontsource/noto-sans/100-italic.css";
@import "@fontsource/noto-sans/200-italic.css";
@import "@fontsource/noto-sans/300-italic.css";
@import "@fontsource/noto-sans/400-italic.css";
@import "@fontsource/noto-sans/500-italic.css";
@import "@fontsource/noto-sans/600-italic.css";
@import "@fontsource/noto-sans/700-italic.css";
@import "@fontsource/noto-sans/800-italic.css";
@import "@fontsource/noto-sans/900-italic.css";

@import "@fontsource/noto-sans/cyrillic-100.css";
@import "@fontsource/noto-sans/cyrillic-200.css";
@import "@fontsource/noto-sans/cyrillic-300.css";
@import "@fontsource/noto-sans/cyrillic-400.css";
@import "@fontsource/noto-sans/cyrillic-500.css";
@import "@fontsource/noto-sans/cyrillic-600.css";
@import "@fontsource/noto-sans/cyrillic-700.css";
@import "@fontsource/noto-sans/cyrillic-800.css";
@import "@fontsource/noto-sans/cyrillic-900.css";

@import "@fontsource/noto-sans/greek-100.css";
@import "@fontsource/noto-sans/greek-200.css";
@import "@fontsource/noto-sans/greek-300.css";
@import "@fontsource/noto-sans/greek-400.css";
@import "@fontsource/noto-sans/greek-500.css";
@import "@fontsource/noto-sans/greek-600.css";
@import "@fontsource/noto-sans/greek-700.css";
@import "@fontsource/noto-sans/greek-800.css";
@import "@fontsource/noto-sans/greek-900.css";

@import "@fontsource/noto-sans-mono/400.css";
@import "@fontsource/noto-sans-mono/600.css";

@import './utilities.css';
@import './overrides.css';
@import './theme/default.css';
@import './theme/styles.css';

html {
  @apply h-full p-safe;
}

body {
  @apply m-0 text-foreground relative bg-secondary select-none font-sans
  overflow-hidden h-full;
  font-size: var(--font-size);
}

p {
  @apply text-pretty mb-4;
}

input {
  @apply appearance-none;

  &:focus {
    @apply outline-hidden;
  }

  &::-webkit-outer-spin-button,
  &::-webkit-inner-spin-button {
    @apply appearance-none;
  }
}

label {
  @apply text-right overflow-hidden text-ellipsis hover:text-foreground-hovered
  hover:cursor-pointer px-1;
}

.menu-content {
  @apply bg-primary drop-shadow-lg p-1 z-10 rounded-sm no-drag min-w-[100px]
  sm:min-w-[200px] border border-border;
}

.menu-item,
.menu-sub-trigger,
.menu-checkbox-item,
.menu-radio-item {
  all: unset;
  @apply button-size flex justify-between gap-4 text-foreground items-center
  rounded-sm relative select-none px-[33px] py-1 md:py-0;
}

.menu-item[data-state='open'],
.menu-sub-trigger[data-state='open'] {
  @apply bg-overlay;
}

.menu-item[data-highlighted],
.menu-sub-trigger[data-highlighted],
.menu-checkbox-item[data-highlighted],
.menu-radio-item[data-highlighted] {
  @apply text-foreground-hovered bg-overlay;
}

.menu-item[data-disabled],
.menu-sub-trigger[data-disabled],
.menu-checkbox-item[data-disabled],
.menu-radio-item[data-disabled] {
  @apply opacity-50 pointer-events-none;
}

.menu-item-indicator {
  @apply inline-flex absolute left-0 items-center justify-center rtl:right-0
  rtl:left-auto w-8;
}

.menu-separator {
  @apply h-divider mx-0;
}

.sub-menu-chevron {
  @apply mr-[-1rem] rtl:ml-[-1rem] rtl:mr-auto text-inherit;
}

.select-content {
  min-width: 127px;
  max-height: 80vh;
}

.select-item {
  @apply px-2;
}

